# Processamento-Digital-Imagens

./: .gitignore  README.md  relatorio.adoc
src/Colorizando Imagens Cinzentas com Mapas de Cores/: colorspace.cpp
src/Decomposição de Imagens em planos de bits/: CMakeLists.txt  bitplanes.cpp
src/Filtragem no domínio espacial I - Convolução/: CMakeLists.txt  convolucao2.cpp
src/Manipulando pixels em uma imagem/: CMakeLists.txt  Ponto.cpp  README.md  main.cpp
src/Manipulando pixels em uma imagem/header/: ImageException.h  Ponto.h
src/Modelos de Cor/: colorspace.cpp
src/Registro de Imagens/: registro.cpp
src/Seleção de Faixa de Cores/: colorrange.cpp
src/Tratando Arquivos de Vídeo/: CMakeLists.txt  video_cinza.cpp  video_negativo.cpp
src/Visualização de Imagens/: plot_line.gp  visualizacao.cpp
src/Visualização de Imagens/result/Imagem 1/: image.txt  line.txt
src/Visualização de Imagens/result/Imagem 2/: draw_sementes2.gp  image.txt  line.txt  trid_sementes2.gp
